trunk/Archive2/25/7db406f392407e/output
main.cpp:1:20: error: variable or field 'sort_list' declared void
     void sort_list(node*& header)
                    ^
main.cpp:1:20: error: 'node' was not declared in this scope
main.cpp:1:27: error: 'header' was not declared in this scope
     void sort_list(node*& header)
                           ^
